# data

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CNAME  README.md  eslint.config.js  jsconfig.json  package-lock.json  package.json  prettier.config.js  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.ts  vitest-setup.ts
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/agents/: README.md  data-journalism.agent.md  publicledger.agent.md
.github/skills/test-api-endpoint/: README.md  SKILL.md
.github/skills/test-api-endpoint/assets/: sample-responses.json  test-template.js
.github/skills/test-api-endpoint/scripts/: test-all.js  test-endpoint.js
.github/workflows/: codeql.yml  dependency-review.yml  release.yml  scorecard.yml
.well-known/: webfinger
data/raw_notebook_csvs/county/Lancaster/: COUNTY_README.md  election_links_2026-05-29T02:26:58.csv  pre2024_COUNTY_README.md
notebooks/: Lancaster_county_scraper.ipynb  PA_state_scraper_county_specific.ipynb  shared_setup.py  shared_table_display.py
scripts/: check-notebooks-clean.sh  fetch-release-data.js  strip-notebook-outputs.sh
src/: app.html  app.scss
src/lib/: Link.svelte  NorefLink.svelte  utils.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/robots.txt/: +server.ts
src/routes/sitemap.xml/: +server.ts
tests/: build-files.test.ts  layout.test.ts  link.test.ts  noreflink.test.ts  page.test.ts  robots.test.ts  sitemap.test.ts  utils.test.ts
types/: ambient.d.ts  custom.d.ts
(+79 files in other folders)
