[project]
name = "publicledger_data"
description = "Public Ledger - Data API"
version = "0.0.3"
requires-python = ">=3.13"
dependencies = [
    # Tutorial dependencies
    "bln",
    "jupyterlab~=4.5",
    "pandas~=3.0",
    "huggingface-hub",
    "matplotlib",
    "pydantic",
    "scikit-learn",
    "stamina",
    "tqdm~=4.67",
    # Dev stuff
    "pre-commit",
    "ipykernel~=7.2",
    "ipywidgets",
    "tabulate",
    "pytest",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.0.3",
]
