[project]
name = "publicledger_data"
description = "Public Ledger - Data API"
version = "0.0.3"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab~=4.5",
    "pandas~=3.0",
    "requests~=2.33",
    "numpy~=2.4",
    "ipykernel~=7.2",
    "tqdm~=4.67",
    "matplotlib~=3.9",
    "scikit-learn~=1.6",
]

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pytest==9.0.3",
]
